--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,45 +3,45 @@ accompanistFlowlayout = "0.20.0"
 accompanistInsets = "0.17.0"
 accompanistNavigationMaterial = "0.31.3-beta"
 accompanistSystemuicontroller = "0.30.1"
-activityComposeVersion = "1.7.0"
-agp = "8.5.1"
+activityComposeVersion = "1.10.1"
+agp = "8.6.1"
 browser = "1.8.0"
 compose = "1.0.0-alpha.1"
-foundation = "1.6.8"
+foundation = "1.7.8"
 glideTransformations = "4.3.0"
 koinVersion = "3.4.2"
-kotlin = "1.9.0"
-coreKtx = "1.13.1"
+kotlin = "2.0.21"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-kotlinxSerializationCore = "1.5.1"
-kotlinxSerializationJson = "1.5.1"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.8.0"
-composeBom = "2024.04.01"
-lifecycleViewmodelCompose = "2.8.4"
-material = "1.7.1"
-material3 = "1.2.1"
-material3Version = "1.1.1"
+kotlinxSerializationCore = "1.6.3"
+kotlinxSerializationJson = "1.6.3"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.10.1"
+composeBom = "2025.04.00"
+lifecycleViewmodelCompose = "2.8.7"
+material = "1.7.8"
+material3 = "1.3.2"
+material3Version = "1.3.2"
 material3WindowSizeClass = "1.2.1"
 material3WindowSizeClassVersion = "1.1.1"
-materialIconsExtended = "1.6.8"
-navigationCompose = "2.8.0"
-navVersion = "2.7.2"
-retrofit = "2.9.0"
-serialization = "1.5.1"
-loggingInterceptor = "4.9.3"
+materialIconsExtended = "1.7.8"
+navigationCompose = "2.8.9"
+navVersion = "2.8.9"
+retrofit = "2.11.0"
+serialization = "1.6.3"
+loggingInterceptor = "4.12.0"
 serializationConverter = "0.8.0"
-room = "2.6.1"
-dagger = "2.40.5"
-daggerCompiler = "2.x"
+room = "2.7.0"
+dagger = "2.52"
+daggerCompiler = "2.48.1"
 daggerCompilerVersion = "2.48.1"
-daggerVersion = "2.48.1"
-playServicesCastFramework = "21.5.0"
-datastorePreferences = "1.1.1"
-constraintlayout = "2.1.4"
-constraintlayoutCompose = "1.0.1"
+daggerVersion = "2.52"
+playServicesCastFramework = "22.0.0"
+datastorePreferences = "1.1.4"
+constraintlayout = "2.2.1"
+constraintlayoutCompose = "1.1.1"
 
 [libraries]
 accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
